# gitdisk

./: CMakeLists.txt  Git.cpp  Git.h  MsgQueue.cpp  MsgQueue.h  README.md  Systray.cpp  Systray.h  gitdisk.cpp
